--- a/odb-sdk/templates/config.h.in
+++ b/odb-sdk/templates/config.h.in
@@ -10,6 +10,7 @@
 #cmakedefine ODBSDK_HM_STATS
 #cmakedefine ODBSDK_MEM_BACKTRACE
 #cmakedefine ODBSDK_MEM_DEBUGGING
+#cmakedefine ODBSDK_MEM_HEX_DUMP
 #cmakedefine ODBSDK_TESTS
 
 #define ODBSDK_SIZEOF_VOID_P          ${CMAKE_SIZEOF_VOID_P}
@@ -19,6 +20,7 @@
 #define ODBSDK_HM_MIN_CAPACITY        ${ODBSDK_HM_MIN_CAPACITY}
 #define ODBSDK_HM_REHASH_AT_PERCENT   ${ODBSDK_HM_REHASH_AT_PERCENT}
 #define ODBSDK_MEM_BACKTRACE_SIZE     ${ODBSDK_MEM_BACKTRACE_SIZE}
+#define ODBSDK_MEM_HEX_DUMP_SIZE      ${ODBSDK_MEM_HEX_DUMP_SIZE}
 #define ODBSDK_THREADLOCAL            ${ODBSDK_THREADLOCAL}
 #define ODBSDK_VEC_EXPAND_FACTOR      ${ODBSDK_VEC_EXPAND_FACTOR}
 #define ODBSDK_VEC_MIN_CAPACITY       ${ODBSDK_VEC_MIN_CAPACITY}
