Command string parsing

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -247,10 +247,10 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     #"src/codegen/internal/DBPEngineInterface.cpp"
     
     "include/odb-compiler/codegen/codegen.h"
-    "src/codegen/codegen.cpp"
+    #"src/codegen/codegen.cpp"
     
     "include/odb-compiler/link/link.h"
-    "src/link/link.cpp"
+    #"src/link/link.cpp"
     
     "${PROJECT_BINARY_DIR}/include/odb-compiler/config.h"
     "templates/config.h.in"
@@ -334,44 +334,44 @@ target_link_libraries (odb-compiler PRIVATE LIB_LIEF)
 # LLVM
 ###############################################################################
 
-find_package (LLVM REQUIRED CONFIG)
-
-# This is apparently deprecated since 4 years
-# https://lists.llvm.org/pipermail/llvm-dev/2017-November/119054.html
+#find_package (LLVM REQUIRED CONFIG)
 #
-#llvm_map_components_to_libnames (llvm_libs <list of LLVM libs>)
-#target_link_directories (odb-compiler PUBLIC ${LLVM_LIBRARY_DIRS})
-#target_link_libraries (odb-compiler PUBLIC ${llvm_libs})
-
-# This is how you're supposed to do it by reading LLVM-Config.cmake
-# https://github.com/llvm-mirror/llvm/blob/master/cmake/modules/LLVM-Config.cmake#L67
-if (${ODBCOMPILER_LLVM_ENABLE_SHARED_LIBS})
-    set (llvm_use_shared USE_SHARED)
-endif()
-llvm_config (odb-compiler ${llvm_use_shared}
-    Core
-    BitWriter
-    AArch64AsmParser
-    AArch64CodeGen
-    ARMAsmParser
-    ARMCodeGen
-    WebAssemblyAsmParser
-    WebAssemblyCodeGen
-    X86AsmParser
-    X86CodeGen)
-find_package (LLD REQUIRED CONFIG)
-target_link_libraries (odb-compiler
-    PRIVATE
-        lldCommon
-        lldCOFF
-        lldELF
-        lldMachO)
-
-target_include_directories (odb-compiler PRIVATE ${LLVM_INCLUDE_DIRS})
-target_compile_definitions (odb-compiler PRIVATE ${LLVM_DEFINITIONS})
-
-# Push LLVM binary dir to parent scope.
-#set (LLVM_BINARY_DIR ${LLVM_BINARY_DIR} PARENT_SCOPE)
+## This is apparently deprecated since 4 years
+## https://lists.llvm.org/pipermail/llvm-dev/2017-November/119054.html
+##
+##llvm_map_components_to_libnames (llvm_libs <list of LLVM libs>)
+##target_link_directories (odb-compiler PUBLIC ${LLVM_LIBRARY_DIRS})
+##target_link_libraries (odb-compiler PUBLIC ${llvm_libs})
+#
+## This is how you're supposed to do it by reading LLVM-Config.cmake
+## https://github.com/llvm-mirror/llvm/blob/master/cmake/modules/LLVM-Config.cmake#L67
+#if (${ODBCOMPILER_LLVM_ENABLE_SHARED_LIBS})
+#    set (llvm_use_shared USE_SHARED)
+#endif()
+#llvm_config (odb-compiler ${llvm_use_shared}
+#    Core
+#    BitWriter
+#    AArch64AsmParser
+#    AArch64CodeGen
+#    ARMAsmParser
+#    ARMCodeGen
+#    WebAssemblyAsmParser
+#    WebAssemblyCodeGen
+#    X86AsmParser
+#    X86CodeGen)
+#find_package (LLD REQUIRED CONFIG)
+#target_link_libraries (odb-compiler
+#    PRIVATE
+#        lldCommon
+#        lldCOFF
+#        lldELF
+#        lldMachO)
+#
+#target_include_directories (odb-compiler PRIVATE ${LLVM_INCLUDE_DIRS})
+#target_compile_definitions (odb-compiler PRIVATE ${LLVM_DEFINITIONS})
+#
+## Push LLVM binary dir to parent scope.
+##set (LLVM_BINARY_DIR ${LLVM_BINARY_DIR} PARENT_SCOPE)
 
 ###############################################################################
 # LLD
