--- a/odb-sdk/plugins/templates/config.h.in
+++ b/odb-sdk/plugins/templates/config.h.in
@@ -1,22 +1,27 @@
 #pragma once
 
-#define STRINGIFY_(x) #x
-#define STRINGIFY(x) STRINGIFY_(x)
-
 #define ODBPLUGIN_VERSION_MAJOR ${PROJECT_VERSION_MAJOR}
 #define ODBPLUGIN_VERSION_MINOR ${PROJECT_VERSION_MINOR}
 #define ODBPLUGIN_VERSION_PATCH ${PROJECT_VERSION_PATCH}
 #define ODBPLUGIN_VERSION \
     ((ODBPLUGIN_VERSION_MAJOR << 16) | (ODBPLUGIN_VERSION_MINOR << 8) | ODBPLUGIN_VERSION_PATCH)
+#define STRINGIFY_(x) #x
+#define STRINGIFY(x) STRINGIFY_(x)
 #define ODBPLUGIN_VERSION_STR \
     STRINGIFY(ODBPLUGIN_VERSION_MAJOR) "." STRINGIFY(ODBPLUGIN_VERSION_MINOR) "." STRINGIFY(ODBPLUGIN_VERSION_PATCH)
-
 #undef STRINGIFY_    
 #undef STRINGIFY
 
-#if defined(ODBPLUGIN_BUILDING)
-#   define ODBPLUGIN_API ${ODBPLUGIN_API_EXPORT}
+#define ODBPLUGIN_API ${ODBPLUGIN_API_EXPORT}
+
+#if defined(__cplusplus)
+#   define ODBPLUGIN_EXTERN_C extern "C"
 #else
-#   define ODBPLUGIN_API ${ODBPLUGIN_API_IMPORT}
+#   define ODBPLUGIN_EXTERN_C
 #endif
+
+#define ODB_COMMAND0(name, help, ret_type, symbol) \
+  ODBPLUGIN_API const char* symbol##_name = name; \
+  ODBPLUGIN_API const char* symbol##_help = help; \
+  ODBPLUGIN_API ODBPLUGIN_EXTERN_C ret_type symbol(void)
 
