--- a/odb-sdk/plugins/templates/config.h.in
+++ b/odb-sdk/plugins/templates/config.h.in
@@ -23,5 +23,9 @@
 #define ODB_COMMAND0(name, help, ret_type, symbol) \
   ODBPLUGIN_API const char* symbol##_name = name; \
   ODBPLUGIN_API const char* symbol##_help = help; \
-  ODBPLUGIN_API ODBPLUGIN_EXTERN_C ret_type symbol(void)
+  ODBPLUGIN_EXTERN_C ODBPLUGIN_API ret_type symbol(void)
+#define ODB_COMMAND1(name, help, ret_type, symbol, arg1) \
+  ODBPLUGIN_API const char* symbol##_name = name; \
+  ODBPLUGIN_API const char* symbol##_help = help; \
+  ODBPLUGIN_EXTERN_C ODBPLUGIN_API ret_type symbol(arg1)
 
