Generate string table + function declarations for plugin commands. Call commands with literals as arguments works. Linker works on linux

--- a/odb-sdk/plugins/core-commands/CMakeLists.txt
+++ b/odb-sdk/plugins/core-commands/CMakeLists.txt
@@ -6,6 +6,7 @@ project ("core-commands"
 
 odb_add_plugin (core-commands
     SOURCES
+        "src/sys.c"
         "src/print_stdout.cpp"
         "src/str.cpp"
     INCLUDE_DIRECTORIES
