New plugin command syntax

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
-cmake_minimum_required (VERSION 3.21)
+cmake_minimum_required (VERSION 3.22)
+
+# DOWNLOAD_EXTRACT_TIMESTAMP TRUE
+#cmake_policy (SET CMP0135 NEW)
 
 # Default to a release build on non-Windows platforms
 if (NOT DEFINED CMAKE_BUILD_TYPE)
@@ -54,8 +57,7 @@ if (ODB_TESTS)
         googletest
         URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.tar.gz
         URL_HASH SHA256=8ad598c73ad796e0d8280b082cebd82a630d73e73cd3c70057938a6501bba5d7
-        DOWNLOAD_EXTRACT_TIMESTAMP TRUE
-    )
+)
     FetchContent_MakeAvailable (googletest)
     add_subdirectory ("odb-tests")
 endif ()
