--- a/odb-sdk/plugins/templates/config.h.in
+++ b/odb-sdk/plugins/templates/config.h.in
@@ -21,11 +21,12 @@
 #endif
 
 #define ODB_COMMAND0(name, help, ret_type, symbol) \
-  ODBPLUGIN_EXTERN_C ODBPLUGIN_API ret_type symbol(void)
+    ODBPLUGIN_EXTERN_C ODBPLUGIN_API ret_type symbol(void)
 #define ODB_COMMAND1(name, help, ret_type, symbol, arg1) \
-  ODBPLUGIN_EXTERN_C ODBPLUGIN_API ret_type symbol(arg1)
+    ODBPLUGIN_EXTERN_C ODBPLUGIN_API ret_type symbol(arg1)
 #define ODB_COMMAND2(name, help, ret_type, symbol, arg1, arg2) \
-  ODBPLUGIN_EXTERN_C ODBPLUGIN_API ret_type symbol(arg1, arg2)
-#define ODB_COMMAND3(name, help, ret_type, symbol, arg1, arg2, arg3) \
-  ODBPLUGIN_EXTERN_C ODBPLUGIN_API ret_type symbol(arg1, arg2, arg3)
-
+    ODBPLUGIN_EXTERN_C ODBPLUGIN_API ret_type symbol(arg1, arg2)
+//#define ODB_COMMAND3(name, help, ret_type, symbol, arg1, arg2, arg3) \
+//  ODBPLUGIN_EXTERN_C ODBPLUGIN_API ret_type symbol(arg1, arg2, arg3)
+#define ODB_COMMAND3(ret_type, symbol, arg1, arg2, arg3, NAME, DESCRIPTION, PARAM1, PARAM2, PARAM3, RETURNS, EXAMPLE, SEE_ALSO) \
+    ret_type symbol(arg1, arg2, arg3)
